# mat

./: .gitignore  .gitmodules  Makefile.conf  Makefile.in  README  README.md  alire.toml  configure  configure.ac  coverage.sh  mat.gpr  mat_gtk.gpr.in  mat_tests.gpr
debian/: README  changelog  control  copyright  rules
docs/: mat.md  matl.md
libgpmat/: Makefile.in  config.status  configure  configure.ac
libgpmat/src/: frame-unix.c  frame-unwind.c  gp-config.h.in  gp-events.c  gp-events.h  gp-file.c  gp-file.h  gp-malloc.c  gp-probe.c  gp-probe.h  gp-proc.c  gp-remote.c  gp-remote.h  gp-socket.c  gp-socket.h  gp-unix.h  shm-channel.c  shm-ops.c
libmat/: Makefile.in  configure  configure.ac
libmat/src/: frame-backtrace.c  frame-i386.h  frame-unix.c  frame-unwind.c  gp-config.h.in  gp-file.c  gp-file.h  gp-probe.c  gp-probe.h  gp-proc.h  gp-remote.c  gp-socket.c  gp-unix.h  mat-events.c  mat-events.h  mat-file.c  mat-file.h  mat-gnat.c  mat-malloc.c  mat-probe.c  mat-probe.h  mat-proc.c  mat-proc.h  mat-remote.c  mat-remote.h  mat-socket.c  mat-socket.h  mat-unix.h  shm-channel.c  shm-channel.h  shm-ops.c  shm-ops.h
mat/: Makefile  Makefile.in  config.gpr  configure  configure.ac  configure.in  gtkmat.gpr.in  mat.c  mat.glade  mat.gpr  mat.gpr.in  mat_config.gpr  mat_gtk.gpr.in  mat_tests.gpr.in  matp.properties  tests.gpr.in
mat/regtests/: mat-expressions-tests.ads  mat-frames-tests.adb  mat-frames-tests.ads  mat-memory-tests.adb  mat-memory-tests.ads  mat-readers-tests.adb  mat-readers-tests.ads  mat-targets-tests.adb  mat-targets-tests.ads  mat-testsuite.adb  mat-testsuite.ads  mat_harness.adb
mat/src/: mat-commands.adb  mat-commands.ads  mat-consoles-text.adb  mat-consoles-text.ads  mat-consoles.adb  mat-consoles.ads  mat-events.adb  mat-events.ads  mat-expressions.adb  mat-expressions.ads  mat-formats.adb  mat-formats.ads  mat-main.adb  mat-readers-files.adb  mat-readers-files.ads  mat-readers-marshaller.adb  mat-readers-marshaller.ads  mat-readers-sockets.adb  mat-readers-sockets.ads  mat-readers-streams-files.adb  mat-readers-streams-files.ads  mat-readers-streams-sockets.adb  mat-readers-streams-sockets.ads  mat-readers-streams.adb  mat-readers-streams.ads  mat-readers.adb  mat-readers.ads  mat-targets-probes.adb  mat-targets-probes.ads  mat-targets-readers.adb  mat-targets-readers.ads  mat-targets.adb  mat-targets.ads  mat-types.adb  mat-types.ads  mat.adb  mat.ads  matp.adb
mat/src/events/: mat-events-probes.adb  mat-events-probes.ads  mat-events-targets.adb  mat-events-targets.ads  mat-events-timelines.adb  mat-events-timelines.ads  mat-events-tools.adb  mat-events-tools.ads  mat-events.ads
mat/src/frames/: mat-frames-print.adb  mat-frames-print.ads  mat-frames-targets.adb  mat-frames.adb  mat-frames.ads
mat/src/gtk/: gtkmatp.adb  mat-callbacks.adb  mat-callbacks.ads  mat-consoles-gtkmat.adb  mat-consoles-gtkmat.ads  mat-events-gtkmat-load_ui_gtk2.adb  mat-events-gtkmat.adb  mat-events-gtkmat.ads  mat-targets-gtkmat.adb  mat-targets-gtkmat.ads
mat/src/memory/: mat-memory-probes.adb  mat-memory-probes.ads  mat-memory-readers.adb  mat-memory-readers.ads  mat-memory-targets.adb  mat-memory-targets.ads  mat-memory-tools.adb  mat-memory-tools.ads  mat-memory.ads
mat/src/parser/: mat-expressions-lexer.adb  mat-expressions-lexer.ads  mat-expressions-lexer.l  mat-expressions-lexer_dfa.adb  mat-expressions-lexer_dfa.ads  mat-expressions-parser.adb  mat-expressions-parser.y  mat-expressions-parser_goto.ads  mat-expressions-parser_io.adb  mat-expressions-parser_io.ads  mat-expressions-parser_shift_reduce.ads  mat-expressions-parser_tokens.ads
mat/src/readline/: readline.adb
mat/src/symbols/: mat-symbols-targets.adb  mat-symbols-targets.ads  mat-symbols.ads
matl/: Makefile.in  matl.1  matl.c  matl.gpr
matp/: Makefile  Makefile.conf.in  Makefile.in  config.gpr  configure  configure.ac  gtkmat.gpr.in  mat.gpr.in  mat_tests.gpr.in  tests.gpr.in
matp/man/: mat.1
matp/regtests/: mat-expressions-tests.adb  mat-frames-tests.adb  mat-memory-tests.adb  mat-readers-tests.adb  mat-targets-tests.adb
matp/src/: elf.ads  mat-commands.adb  mat-commands.ads  mat-consoles-text.adb  mat-consoles-text.ads  mat-consoles.adb  mat-consoles.ads  mat-expressions.adb  mat-expressions.ads  mat-formats.adb  mat-formats.ads  mat-interrupts.ads  mat-readers-marshaller.adb  mat-readers-streams-files.adb  mat-readers-streams-sockets.adb  mat-readers-streams.adb  mat-readers.ads  mat-targets-probes.adb  mat-targets-probes.ads  mat-targets.adb  mat-targets.ads  mat-types.adb  mat-types.ads  matp.adb
matp/src/events/: mat-events-probes.adb  mat-events-probes.ads  mat-events-targets.adb  mat-events-targets.ads  mat-events-timelines.adb  mat-events-timelines.ads  mat-events-tools.adb  mat-events-tools.ads  mat-events.ads
matp/src/frames/: mat-frames-print.adb  mat-frames-targets.adb  mat-frames-targets.ads  mat-frames.adb  mat-frames.ads
matp/src/gtk/: mat-consoles-gtkmat.ads  mat-events-gtkmat-load_ui_gtk3.adb  mat-events-gtkmat.ads  mat-targets-gtkmat.adb
matp/src/memory/: mat-memory-probes.adb  mat-memory-probes.ads  mat-memory-targets.adb  mat-memory-targets.ads  mat-memory-tools.adb  mat-memory.ads
matp/src/parser/: mat-expressions-lexer.adb  mat-expressions-lexer.ads  mat-expressions-lexer.l  mat-expressions-lexer_dfa.ads  mat-expressions-parser.y  (+6 more)
regtests/: alire.toml  mat-memory-tests.adb  mat-memory-tests.ads  mat_tests.gpr
regtests/src/: mat-targets-tests.ads
src/: mat-commands.adb  mat-consoles-text.ads  mat-expressions.ads  mat-interrupts.adb  mat-readers-marshaller.ads  mat-targets-probes.adb  mat-targets.ads  mat-types.ads  mat.adb
src/events/: mat-events-targets.ads  mat-events.adb  mat-events.ads
src/frames/: mat-frames-print.adb
src/gtk/: mat-events-gtkmat-load_ui_gtk3.adb
src/parser/: mat-expressions-lexer.l  mat-expressions-lexer_dfa.ads  mat-expressions-parser.adb  mat-expressions-parser.ads  mat-expressions-parser.y  mat-expressions-parser_io.ads
src/readline/: readline.adb
src/symbols/: mat-symbols-targets.adb  mat-symbols-targets.ads
(+3 files in other folders)
